Added map, markdown, medical, microphone, minus and movie iconsets

--- a/demo/index.html
+++ b/demo/index.html
@@ -762,6 +762,80 @@
         </template>
       </demo-snippet>
 
+      <h2>Map</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-map:crosshair"></iron-icon>
+          <iron-icon icon="mdi-map:crosshair-gps"></iron-icon>
+          <iron-icon icon="mdi-map:map"></iron-icon>
+          <iron-icon icon="mdi-map:map-marker"></iron-icon>
+          <iron-icon icon="mdi-map:map-marker-circle"></iron-icon>
+          <iron-icon icon="mdi-map:map-marker-off"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Markdown</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-markdown:format-header-1"></iron-icon>
+          <iron-icon icon="mdi-markdown:format-header-2"></iron-icon>
+          <iron-icon icon="mdi-markdown:format-header-3"></iron-icon>
+          <iron-icon icon="mdi-markdown:format-header-4"></iron-icon>
+          <iron-icon icon="mdi-markdown:format-header-5"></iron-icon>
+          <iron-icon icon="mdi-markdown:format-header-6"></iron-icon>
+          <iron-icon icon="mdi-markdown:format-header-pound"></iron-icon>
+          <iron-icon icon="mdi-markdown:format-paragraph"></iron-icon>
+          <iron-icon icon="mdi-markdown:format-subscript"></iron-icon>
+          <iron-icon icon="mdi-markdown:format-superscript"></iron-icon>
+          <iron-icon icon="mdi-markdown:markdown"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Medical</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-medical:ambulance"></iron-icon>
+          <iron-icon icon="mdi-medical:flask"></iron-icon>
+          <iron-icon icon="mdi-medical:flash-empty"></iron-icon>
+          <iron-icon icon="mdi-medical:flash-empty-outline"></iron-icon>
+          <iron-icon icon="mdi-medical:flash-outline"></iron-icon>
+          <iron-icon icon="mdi-medical:hospital"></iron-icon>
+          <iron-icon icon="mdi-medical:hospital-building"></iron-icon>
+          <iron-icon icon="mdi-medical:hospital-marker"></iron-icon>
+          <iron-icon icon="mdi-medical:needle"></iron-icon>
+          <iron-icon icon="mdi-medical:pharmacy"></iron-icon>
+          <iron-icon icon="mdi-medical:pill"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Microphone</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-microphone:microphone"></iron-icon>
+          <iron-icon icon="mdi-microphone:microphone-off"></iron-icon>
+          <iron-icon icon="mdi-microphone:microphone-outline"></iron-icon>
+          <iron-icon icon="mdi-microphone:microphone-settings"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Minus</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-minus:minus"></iron-icon>
+          <iron-icon icon="mdi-minus:minus-box"></iron-icon>
+          <iron-icon icon="mdi-minus:minus-circle"></iron-icon>
+          <iron-icon icon="mdi-minus:minus-circle-outline"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Movie</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-movie:film"></iron-icon>
+          <iron-icon icon="mdi-movie:filmstrip"></iron-icon>
+        </template>
+      </demo-snippet>
+
     </div>
 
   </body>
