--- a/mdi-iconset-svg.html
+++ b/mdi-iconset-svg.html
@@ -35,3 +35,9 @@
 <link rel="import" href="mdi-local-iconset-svg.html">
 <link rel="import" href="mdi-lock-iconset-svg.html">
 <link rel="import" href="mdi-logo-iconset-svg.html">
+<link rel="import" href="mdi-map-iconset-svg.html">
+<link rel="import" href="mdi-markdown-iconset-svg.html">
+<link rel="import" href="mdi-medical-iconset-svg.html">
+<link rel="import" href="mdi-microphone-iconset-svg.html">
+<link rel="import" href="mdi-minus-iconset-svg.html">
+<link rel="import" href="mdi-movie-iconset-svg.html">
