Added octagon, off, os and outline iconsets

--- a/demo/index.html
+++ b/demo/index.html
@@ -836,6 +836,74 @@
         </template>
       </demo-snippet>
 
+      <h2>Octagon</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-octagon:pause-octagon"></iron-icon>
+          <iron-icon icon="mdi-octagon:pause-octagon-outline"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Off</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-off:airplane-off"></iron-icon>
+          <iron-icon icon="mdi-off:bell-off"></iron-icon>
+          <iron-icon icon="mdi-off:camcorder-box-off"></iron-icon>
+          <iron-icon icon="mdi-off:camcorder-off"></iron-icon>
+          <iron-icon icon="mdi-off:cloud-off-outline"></iron-icon>
+          <iron-icon icon="mdi-off:eye-off"></iron-icon>
+          <iron-icon icon="mdi-off:map-marker-off"></iron-icon>
+          <iron-icon icon="mdi-off:microphone-off"></iron-icon>
+          <iron-icon icon="mdi-off:server-network-off"></iron-icon>
+          <iron-icon icon="mdi-off:server-off"></iron-icon>
+          <iron-icon icon="mdi-off:speaker-off"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Operating System</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-os:android"></iron-icon>
+          <iron-icon icon="mdi-os:linux"></iron-icon>
+          <iron-icon icon="mdi-os:ubuntu"></iron-icon>
+          <iron-icon icon="mdi-os:windows"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Outline</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-outline:arrow-down-bold-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:arrow-left-bold-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:arrow-right-bold-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:arrow-up-bold-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:bookmark-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:cart-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:checkbox-blank-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:checkbox-blank-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:checkbox-marked-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:checkbox-marked-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:close-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:cloud-off-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:cloud-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:filter-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:filter-remove-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:folder-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:heart-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:information-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:label-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:lock-open-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:lock-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:microphone-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:minus-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:music-box-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:pause-octagon-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:plus-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-outline:tooltip-outline"></iron-icon>
+        </template>
+      </demo-snippet>
+
     </div>
 
   </body>
