--- a/mdi-iconset-svg.html
+++ b/mdi-iconset-svg.html
@@ -41,3 +41,7 @@
 <link rel="import" href="mdi-microphone-iconset-svg.html">
 <link rel="import" href="mdi-minus-iconset-svg.html">
 <link rel="import" href="mdi-movie-iconset-svg.html">
+<link rel="import" href="mdi-octagon-iconset-svg.html">
+<link rel="import" href="mdi-off-iconset-svg.html">
+<link rel="import" href="mdi-os-iconset-svg.html">
+<link rel="import" href="mdi-outline-iconset-svg.html">
