Added phone, pin and plus iconsets

--- a/demo/index.html
+++ b/demo/index.html
@@ -904,6 +904,40 @@
         </template>
       </demo-snippet>
 
+      <h2>Phone</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-phone:phone"></iron-icon>
+          <iron-icon icon="mdi-phone:phone-bluetooth"></iron-icon>
+          <iron-icon icon="mdi-phone:phone-forward"></iron-icon>
+          <iron-icon icon="mdi-phone:phone-hangup"></iron-icon>
+          <iron-icon icon="mdi-phone:phone-in-talk"></iron-icon>
+          <iron-icon icon="mdi-phone:phone-locked"></iron-icon>
+          <iron-icon icon="mdi-phone:phone-missed"></iron-icon>
+          <iron-icon icon="mdi-phone:phone-paused"></iron-icon>
+          <iron-icon icon="mdi-phone:phone-settings"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Pin</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-pin:map-marker"></iron-icon>
+          <iron-icon icon="mdi-pin:map-marker-off"></iron-icon>
+          <iron-icon icon="mdi-pin:pin"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Plus</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-plus:plus"></iron-icon>
+          <iron-icon icon="mdi-plus:plus-box"></iron-icon>
+          <iron-icon icon="mdi-plus:plus-circle"></iron-icon>
+          <iron-icon icon="mdi-plus:plus-circle-outline"></iron-icon>
+        </template>
+      </demo-snippet>
+
     </div>
 
   </body>
