--- a/mdi-iconset-svg.html
+++ b/mdi-iconset-svg.html
@@ -45,3 +45,6 @@
 <link rel="import" href="mdi-off-iconset-svg.html">
 <link rel="import" href="mdi-os-iconset-svg.html">
 <link rel="import" href="mdi-outline-iconset-svg.html">
+<link rel="import" href="mdi-phone-iconset-svg.html">
+<link rel="import" href="mdi-pin-iconset-svg.html">
+<link rel="import" href="mdi-plus-iconset-svg.html">
