Added settings, shape, social, square and store iconsets

--- a/demo/index.html
+++ b/demo/index.html
@@ -938,6 +938,68 @@
         </template>
       </demo-snippet>
 
+      <h2>Settings</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-settings:bluetooth-settings"></iron-icon>
+          <iron-icon icon="mdi-settings:cellphone-settings"></iron-icon>
+          <iron-icon icon="mdi-settings:microphone-settings"></iron-icon>
+          <iron-icon icon="mdi-settings:phone-settings"></iron-icon>
+          <iron-icon icon="mdi-settings:power-settings"></iron-icon>
+          <iron-icon icon="mdi-settings:settings"></iron-icon>
+          <iron-icon icon="mdi-settings:settings-box"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Shape</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-shape:vector-square"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Social</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-social:blogger"></iron-icon>
+          <iron-icon icon="mdi-social:disqus"></iron-icon>
+          <iron-icon icon="mdi-social:dribble"></iron-icon>
+          <iron-icon icon="mdi-social:facebook"></iron-icon>
+          <iron-icon icon="mdi-social:facebook-box"></iron-icon>
+          <iron-icon icon="mdi-social:github-box"></iron-icon>
+          <iron-icon icon="mdi-social:github-circle"></iron-icon>
+          <iron-icon icon="mdi-social:google-plus"></iron-icon>
+          <iron-icon icon="mdi-social:google-plus-box"></iron-icon>
+          <iron-icon icon="mdi-social:instagram"></iron-icon>
+          <iron-icon icon="mdi-social:instapaper"></iron-icon>
+          <iron-icon icon="mdi-social:linkedin"></iron-icon>
+          <iron-icon icon="mdi-social:pinterest"></iron-icon>
+          <iron-icon icon="mdi-social:pocket"></iron-icon>
+          <iron-icon icon="mdi-social:readability"></iron-icon>
+          <iron-icon icon="mdi-social:rss-box"></iron-icon>
+          <iron-icon icon="mdi-social:tumblr"></iron-icon>
+          <iron-icon icon="mdi-social:twitch"></iron-icon>
+          <iron-icon icon="mdi-social:twitter"></iron-icon>
+          <iron-icon icon="mdi-social:twitter-box"></iron-icon>
+          <iron-icon icon="mdi-social:whatsapp"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Square</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-square:houzz-box"></iron-icon>
+          <iron-icon icon="mdi-square:rss-box"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Store</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-store:receipt"></iron-icon>
+        </template>
+      </demo-snippet>
+
     </div>
 
   </body>
