--- a/mdi-iconset-svg.html
+++ b/mdi-iconset-svg.html
@@ -48,3 +48,8 @@
 <link rel="import" href="mdi-phone-iconset-svg.html">
 <link rel="import" href="mdi-pin-iconset-svg.html">
 <link rel="import" href="mdi-plus-iconset-svg.html">
+<link rel="import" href="mdi-settings-iconset-svg.html">
+<link rel="import" href="mdi-shape-iconset-svg.html">
+<link rel="import" href="mdi-social-iconset-svg.html">
+<link rel="import" href="mdi-square-iconset-svg.html">
+<link rel="import" href="mdi-store-iconset-svg.html">
