Added text, time, tooltip, transform and transportation iconsets

--- a/demo/index.html
+++ b/demo/index.html
@@ -1000,6 +1000,58 @@
         </template>
       </demo-snippet>
 
+      <h2>Text</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-text:clipboard-text"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Time</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-time:camera-timer"></iron-icon>
+          <iron-icon icon="mdi-time:clock"></iron-icon>
+          <iron-icon icon="mdi-time:timelapse"></iron-icon>
+          <iron-icon icon="mdi-time:timer-sand"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Tooltip</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-tooltip:tooltip"></iron-icon>
+          <iron-icon icon="mdi-tooltip:tooltip-edit"></iron-icon>
+          <iron-icon icon="mdi-tooltip:tooltip-image"></iron-icon>
+          <iron-icon icon="mdi-tooltip:tooltip-outline"></iron-icon>
+          <iron-icon icon="mdi-tooltip:tooltip-text"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Transform</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-transform:rotate-left-variant"></iron-icon>
+          <iron-icon icon="mdi-transform:rotate-right-variant"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Transpotation</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-transportation:bike"></iron-icon>
+          <iron-icon icon="mdi-transportation:bus"></iron-icon>
+          <iron-icon icon="mdi-transportation:car"></iron-icon>
+          <iron-icon icon="mdi-transportation:ferry"></iron-icon>
+          <iron-icon icon="mdi-transportation:motorbike"></iron-icon>
+          <iron-icon icon="mdi-transportation:subway-variant"></iron-icon>
+          <iron-icon icon="mdi-transportation:taxi"></iron-icon>
+          <iron-icon icon="mdi-transportation:train"></iron-icon>
+          <iron-icon icon="mdi-transportation:tram"></iron-icon>
+          <iron-icon icon="mdi-transportation:truck"></iron-icon>
+        </template>
+      </demo-snippet>
+
     </div>
 
   </body>
