--- a/mdi-iconset-svg.html
+++ b/mdi-iconset-svg.html
@@ -53,3 +53,8 @@
 <link rel="import" href="mdi-social-iconset-svg.html">
 <link rel="import" href="mdi-square-iconset-svg.html">
 <link rel="import" href="mdi-store-iconset-svg.html">
+<link rel="import" href="mdi-text-iconset-svg.html">
+<link rel="import" href="mdi-time-iconset-svg.html">
+<link rel="import" href="mdi-tooltip-iconset-svg.html">
+<link rel="import" href="mdi-transform-iconset-svg.html">
+<link rel="import" href="mdi-transportation-iconset-svg.html">
