Added user, vector and video iconsets

--- a/demo/index.html
+++ b/demo/index.html
@@ -1052,6 +1052,43 @@
         </template>
       </demo-snippet>
 
+      <h2>User</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-user:account"></iron-icon>
+          <iron-icon icon="mdi-user:account-box"></iron-icon>
+          <iron-icon icon="mdi-user:account-circle"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Vector</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-vector:vector-square"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Video</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-video:camcorder"></iron-icon>
+          <iron-icon icon="mdi-video:camcorder-box"></iron-icon>
+          <iron-icon icon="mdi-video:closed-caption"></iron-icon>
+          <iron-icon icon="mdi-video:fast-forward"></iron-icon>
+          <iron-icon icon="mdi-video:pause"></iron-icon>
+          <iron-icon icon="mdi-video:pause-circle"></iron-icon>
+          <iron-icon icon="mdi-video:pause-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-video:play"></iron-icon>
+          <iron-icon icon="mdi-video:play-circle"></iron-icon>
+          <iron-icon icon="mdi-video:play-circle-outline"></iron-icon>
+          <iron-icon icon="mdi-video:quality-high"></iron-icon>
+          <iron-icon icon="mdi-video:rewind"></iron-icon>
+          <iron-icon icon="mdi-video:skip-next"></iron-icon>
+          <iron-icon icon="mdi-video:skip-previous"></iron-icon>
+          <iron-icon icon="mdi-video:stop"></iron-icon>
+        </template>
+      </demo-snippet>
+
     </div>
 
   </body>
