--- a/mdi-iconset-svg.html
+++ b/mdi-iconset-svg.html
@@ -58,3 +58,6 @@
 <link rel="import" href="mdi-tooltip-iconset-svg.html">
 <link rel="import" href="mdi-transform-iconset-svg.html">
 <link rel="import" href="mdi-transportation-iconset-svg.html">
+<link rel="import" href="mdi-user-iconset-svg.html">
+<link rel="import" href="mdi-vector-iconset-svg.html">
+<link rel="import" href="mdi-video-iconset-svg.html">
