Added view, vote and weather iconsets

--- a/demo/index.html
+++ b/demo/index.html
@@ -20,10 +20,10 @@
 
     <style is="custom-style">
       demo-snippet {
-        --demo-snippet-code: {
+        /* --demo-snippet-code: {
           height: 0;
           padding: 0;
-        };
+        }; */
       }
     </style>
 
@@ -1086,6 +1086,64 @@
           <iron-icon icon="mdi-video:skip-next"></iron-icon>
           <iron-icon icon="mdi-video:skip-previous"></iron-icon>
           <iron-icon icon="mdi-video:stop"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>View</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-view:view-agenda"></iron-icon>
+          <iron-icon icon="mdi-view:view-array"></iron-icon>
+          <iron-icon icon="mdi-view:view-carousel"></iron-icon>
+          <iron-icon icon="mdi-view:view-column"></iron-icon>
+          <iron-icon icon="mdi-view:view-dashboard"></iron-icon>
+          <iron-icon icon="mdi-view:view-day"></iron-icon>
+          <iron-icon icon="mdi-view:view-headline"></iron-icon>
+          <iron-icon icon="mdi-view:view-list"></iron-icon>
+          <iron-icon icon="mdi-view:view-module"></iron-icon>
+          <iron-icon icon="mdi-view:view-quilt"></iron-icon>
+          <iron-icon icon="mdi-view:view-stream"></iron-icon>
+          <iron-icon icon="mdi-view:view-week"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Vote</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-vote:heart"></iron-icon>
+          <iron-icon icon="mdi-vote:heart-outline"></iron-icon>
+          <iron-icon icon="mdi-vote:star"></iron-icon>
+          <iron-icon icon="mdi-vote:star-half"></iron-icon>
+          <iron-icon icon="mdi-vote:star-outline"></iron-icon>
+          <iron-icon icon="mdi-vote:thumb-down"></iron-icon>
+          <iron-icon icon="mdi-vote:thumb-up"></iron-icon>
+        </template>
+      </demo-snippet>
+
+      <h2>Weather</h2>
+      <demo-snippet>
+        <template>
+          <iron-icon icon="mdi-weather:cloud"></iron-icon>
+          <iron-icon icon="mdi-weather:temperature-celcius"></iron-icon>
+          <iron-icon icon="mdi-weather:temperature-fahrenheit"></iron-icon>
+          <iron-icon icon="mdi-weather:temperature-kelvin"></iron-icon>
+          <iron-icon icon="mdi-weather:thermometer"></iron-icon>
+          <iron-icon icon="mdi-weather:thermometer-lines"></iron-icon>
+          <iron-icon icon="mdi-weather:weather-cloudy"></iron-icon>
+          <iron-icon icon="mdi-weather:weather-hail"></iron-icon>
+          <iron-icon icon="mdi-weather:weather-lightning"></iron-icon>
+          <iron-icon icon="mdi-weather:weather-lightning-rainy"></iron-icon>
+          <iron-icon icon="mdi-weather:weather-night"></iron-icon>
+          <iron-icon icon="mdi-weather:weather-partlycloudy"></iron-icon>
+          <iron-icon icon="mdi-weather:weather-pouring"></iron-icon>
+          <iron-icon icon="mdi-weather:weather-rainy"></iron-icon>
+          <iron-icon icon="mdi-weather:weather-snowy"></iron-icon>
+          <iron-icon icon="mdi-weather:weather-sunny"></iron-icon>
+          <iron-icon icon="mdi-weather:weather-sunset"></iron-icon>
+          <iron-icon icon="mdi-weather:weather-sunset-down"></iron-icon>
+          <iron-icon icon="mdi-weather:weather-sunset-up"></iron-icon>
+          <iron-icon icon="mdi-weather:weather-windy"></iron-icon>
+          <iron-icon icon="mdi-weather:weather-windy-variant"></iron-icon>
         </template>
       </demo-snippet>
 
