--- a/mdi-iconset-svg.html
+++ b/mdi-iconset-svg.html
@@ -61,3 +61,6 @@
 <link rel="import" href="mdi-user-iconset-svg.html">
 <link rel="import" href="mdi-vector-iconset-svg.html">
 <link rel="import" href="mdi-video-iconset-svg.html">
+<link rel="import" href="mdi-view-iconset-svg.html">
+<link rel="import" href="mdi-vote-iconset-svg.html">
+<link rel="import" href="mdi-weather-iconset-svg.html">
