Removed default fill color

--- a/mdi-error-iconset-svg.html
+++ b/mdi-error-iconset-svg.html
@@ -18,7 +18,7 @@ Example:
   <svg>
 
     <g id="alert">
-      <path fill="#000000" d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z" />
+      <path d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z" />
     </g>
 
   </svg>
