--- a/mdi-helper-iconset-svg.html
+++ b/mdi-helper-iconset-svg.html
@@ -18,7 +18,7 @@ Example:
   <svg>
 
     <g id="color-helper">
-      <path fill="#000000" d="M0,24H24V20H0V24Z" />
+      <path d="M0,24H24V20H0V24Z" />
     </g>
 
   </svg>
