--- a/mdi-audio-iconset-svg.html
+++ b/mdi-audio-iconset-svg.html
@@ -18,51 +18,51 @@ Example:
   <svg>
 
     <g id="fast-forward">
-      <path fill="#000000" d="M13,6V18L21.5,12M4,18L12.5,12L4,6V18Z" />
+      <path d="M13,6V18L21.5,12M4,18L12.5,12L4,6V18Z" />
     </g>
 
     <g id="pause">
-      <path fill="#000000" d="M14,19H18V5H14M6,19H10V5H6V19Z" />
+      <path d="M14,19H18V5H14M6,19H10V5H6V19Z" />
     </g>
 
     <g id="pause-circle">
-      <path fill="#000000" d="M15,16H13V8H15M11,16H9V8H11M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
+      <path d="M15,16H13V8H15M11,16H9V8H11M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
     </g>
 
     <g id="pause-circle-outline">
-      <path fill="#000000" d="M13,16V8H15V16H13M9,16V8H11V16H9M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4Z" />
+      <path d="M13,16V8H15V16H13M9,16V8H11V16H9M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4Z" />
     </g>
 
     <g id="play">
-      <path fill="#000000" d="M8,5.14V19.14L19,12.14L8,5.14Z" />
+      <path d="M8,5.14V19.14L19,12.14L8,5.14Z" />
     </g>
 
     <g id="play-circle">
-      <path fill="#000000" d="M10,16.5V7.5L16,12M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
+      <path d="M10,16.5V7.5L16,12M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
     </g>
 
     <g id="play-circle-outline">
-      <path fill="#000000" d="M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M10,16.5L16,12L10,7.5V16.5Z" />
+      <path d="M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M10,16.5L16,12L10,7.5V16.5Z" />
     </g>
 
     <g id="quality-high">
-      <path fill="#000000" d="M14.5,13.5H16.5V10.5H14.5M18,14A1,1 0 0,1 17,15H16.25V16.5H14.75V15H14A1,1 0 0,1 13,14V10A1,1 0 0,1 14,9H17A1,1 0 0,1 18,10M11,15H9.5V13H7.5V15H6V9H7.5V11.5H9.5V9H11M19,4H5C3.89,4 3,4.89 3,6V18A2,2 0 0,0 5,20H19A2,2 0 0,0 21,18V6C21,4.89 20.1,4 19,4Z" />
+      <path d="M14.5,13.5H16.5V10.5H14.5M18,14A1,1 0 0,1 17,15H16.25V16.5H14.75V15H14A1,1 0 0,1 13,14V10A1,1 0 0,1 14,9H17A1,1 0 0,1 18,10M11,15H9.5V13H7.5V15H6V9H7.5V11.5H9.5V9H11M19,4H5C3.89,4 3,4.89 3,6V18A2,2 0 0,0 5,20H19A2,2 0 0,0 21,18V6C21,4.89 20.1,4 19,4Z" />
     </g>
 
     <g id="rewind">
-      <path fill="#000000" d="M11.5,12L20,18V6M11,18V6L2.5,12L11,18Z" />
+      <path d="M11.5,12L20,18V6M11,18V6L2.5,12L11,18Z" />
     </g>
 
     <g id="skip-next">
-      <path fill="#000000" d="M16,18H18V6H16M6,18L14.5,12L6,6V18Z" />
+      <path d="M16,18H18V6H16M6,18L14.5,12L6,6V18Z" />
     </g>
 
     <g id="skip-previous">
-      <path fill="#000000" d="M6,18V6H8V18H6M9.5,12L18,6V18L9.5,12Z" />
+      <path d="M6,18V6H8V18H6M9.5,12L18,6V18L9.5,12Z" />
     </g>
 
     <g id="stop">
-      <path fill="#000000" d="M18,18H6V6H18V18Z" />
+      <path d="M18,18H6V6H18V18Z" />
     </g>
 
   </svg>
