Added better demo

--- a/mdi-iconset-svg.html
+++ b/mdi-iconset-svg.html
@@ -1,3 +1,18 @@
+<!--
+Material design: [Icons](https://material.io/guidelines/style/icons.html)
+
+`mdi-iconset-svg` is a iconset for the Material Design Icons collection
+
+Example:
+
+    <link rel="import" href="mdi-logo-iconset-svg.html">
+
+    <iron-icon icon="mdi-logo:polymer"></iron-icon>
+
+@pseudoElement mdi-iconset-svg
+@demo demo/index.html 
+-->
+
 <link rel="import" href="mdi-account-iconset-svg.html">
 <link rel="import" href="mdi-action-iconset-svg.html">
 <link rel="import" href="mdi-agriculture-iconset-svg.html">
